# pic2stl

./: LICENSE  README.md  large.stl  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: 2d2stl.py
src/pic2stl/: __init__.py  pic2stl.py
tests/: test_pic2stl.py
